--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.jk</groupId>
+            <artifactId>zht</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
