--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,6 @@
 	</filter-mapping>
 	<!--欢迎页面 -->
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>yqorder.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
